--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm":"6.4.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./server/index.js"
   },
   "author": "",
   "license": "ISC",
